[package]
name = "fmus-post-ui"
version = "0.0.1"
description = "FMUS-POST - Modern API Testing Tool"
authors = ["Yusef Ulum"]
license = "MIT"
repository = ""
edition = "2021"

# Komentar: Melihat nilai 'build-std' dan 'lto' untuk optimasi build
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

# Komentar: Ini adalah dependensi utama aplikasi
[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "http-all", "clipboard-write-text"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.29", features = ["full"] }
tokio-tungstenite = "0.20"
uuid = { version = "1.4", features = ["v4", "serde"] }
base64 = "0.21"

# Komentar: Ini untuk optimasi release build
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
